--- a/A08/EZ-Parallax-master/parallax.css
+++ b/A08/EZ-Parallax-master/parallax.css
@@ -192,3 +192,31 @@
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255,255,255,0.8%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
+
+   .footer-animate {
+      animation: float 3s ease-in-out infinite, glow 2s ease-in-out infinite, colorShift 6s linear infinite;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(0);
+      }
+
+      50% {
+        transform: translateY(-5px);
+      }
+
+      100% {
+        transform: translateY(0);
+      }
+    }
+
+	    body,a{
+      background-color: var(--dark-bg);
+      color: #fff;
+      font-family: 'Roboto Mono', monospace;
+      transition: background-color var(--transition), color var(--transition);
+      scroll-behavior: smooth;
+    }
